--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
     <string name="button_loading">We are loading </string>
     <string name="title_activity_detail">DetailActivity</string>
     <string name="ok">Ok</string>
+    <string name="load_app_channel_id">channel_id1</string>
+    <string name="load_app_channel_name">Load</string>
+    <string name="channel_description">Download completed notifier</string>
 </resources>
