--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,7 @@
     <string name="load_app_channel_id">channel_id1</string>
     <string name="load_app_channel_name">Load</string>
     <string name="channel_description">Download completed notifier</string>
+    <string name="retrofit_type_safe_http_client_for_android_and_java_by_square_inc">Retrofit - Type-safe HTTP client for Android and Java by Square Inc</string>
+    <string name="loadapp_current_repository_by_udacity">LoadApp - current repository by Udacity</string>
+    <string name="glide_image_loading_library_by_bumptech">Glide - Image loading library by BumpTech</string>
 </resources>
